feat: 영화 예매 기능 optimistic lock 적용

--- a/docs/동시성테스트보고서.md
+++ b/docs/동시성테스트보고서.md
@@ -30,11 +30,66 @@ where
 - 동시에 10명이 같은 좌석을 예매하는 경우
 
 ```
+
 소요시간: 1780ms
 StopWatch '': 1.78015525 seconds
 ----------------------------------------
 Seconds       %       Task name
 ----------------------------------------
 1.78015525    100%    
+
+```
+
+## Optimistic Lock (낙관적 락)
+
+### 적용 방법
+
+조회 시점 `version` 값과 변경 시점 `version` 값을 비교해 다른 트랙잭션에서의 변경을 감지합니다.
+
+```
+@Entity
+@Table(name = "allocated_seat")
+@AllArgsConstructor
+public class AllocatedSeatJpaEntity {
+    // ... 
+    @Version
+    @ColumnDefault("0")
+    private Integer version;
+}
+
+update
+    allocated_seat 
+set
+    reserved=?,
+    screening_id=?,
+    seat_id=?,
+    version=? 
+where
+    allocated_seat_id=? 
+    and version=?
+    
+```
+
+- version 불일치 시 `ObjectOptimisticLockingFailureException` 발생
+
+```
+org.springframework.orm.ObjectOptimisticLockingFailureException: 
+Row was updated or deleted by another transaction (or unsaved-value mapping was incorrect):
+[com.moduleinfra.entity.screening.AllocatedSeatJpaEntity#1]
+
+```
+
+### 동시성 테스트 결과
+
+- 동시에 10명이 같은 좌석을 예매하는 경우
+
+```
+
+소요시간: 829ms
+StopWatch '': 0.829533416 seconds
+----------------------------------------
+Seconds       %       Task name
+----------------------------------------
+0.829533416   100%     
 
 ```
