--- a/docs/동시성테스트보고서.md
+++ b/docs/동시성테스트보고서.md
@@ -1,6 +1,6 @@
 # 동시성 테스트 보고서
 
-## Pessimistic Lock (비관적 락)
+## 1. Pessimistic Lock (비관적 락)
 
 ### 적용 방법
 
@@ -40,7 +40,7 @@ Seconds       %       Task name
 
 ```
 
-## Optimistic Lock (낙관적 락)
+## 2. Optimistic Lock (낙관적 락)
 
 ### 적용 방법
 
@@ -93,3 +93,81 @@ Seconds       %       Task name
 0.829533416   100%     
 
 ```
+
+## 3. Distribute Lock (분산 락)
+
+### 적용 방법
+
+```
+@Aspect
+@Component
+@RequiredArgsConstructor
+@Slf4j
+public class DistributedLockAop {
+    private static final String REDISSON_LOCK_PREFIX = "LOCK:";
+
+    private final RedissonClient redissonClient;
+    private final AopForTransaction aopForTransaction;
+
+    @Around("@annotation(com.moduledomain.command.DistributedLock)")
+    public Object lock(final ProceedingJoinPoint joinPoint) throws Throwable {
+        // ...
+        List<RLock> locks = Arrays.stream(keys)
+                .map(key -> REDISSON_LOCK_PREFIX + CustomSpringELParser.getDynamicValue(
+                        signature.getParameterNames(),
+                        joinPoint.getArgs(),
+                        key
+                ))
+                .map(redissonClient::getLock)
+                .toList();
+
+        RLock multiLock = redissonClient.getMultiLock(locks.toArray(new RLock[0]));
+        
+        try {
+            boolean locked = multiLock.tryLock(distributedLock.waitTime(), distributedLock.leaseTime(), distributedLock.timeUnit());
+            if (!locked) {
+                log.warn("Failed to acquire lock for keys: {}", Arrays.toString(keys));
+                return false;  // 락 획득 실패 처리
+            }
+            return joinPoint.proceed();  // 락 획득 후 예약 로직 실행
+        } finally {
+            try {
+                multiLock.unlock();  // 예약이 끝나면 락 해제
+            } catch (IllegalMonitorStateException e) {
+                log.warn("Lock already unlocked: {}", Arrays.toString(keys));
+            }
+        }
+    }
+}
+    
+```
+
+### 동시성 테스트 결과
+
+- 동시에 50명이 같은 좌석을 예매하는 경우 (leaseTime = 3, waitTime = 2)
+
+```
+소요시간: 1521ms
+StopWatch '': 1.521761333 seconds
+----------------------------------------
+Seconds       %       Task name
+----------------------------------------
+1.521761333   100%    
+
+
+```
+
+- 동시에 50명이 같은 좌석을 예매하는 경우 (leaseTime = 3, waitTime = 10)
+
+```
+소요시간: 2898ms
+StopWatch '': 2.898015875 seconds
+----------------------------------------
+Seconds       %       Task name
+----------------------------------------
+2.898015875   100%    
+
+```
+
+⭐️ 단순 예매 API로 작업 평균 시간을 1초로 예상하였으며, 이보다 여유롭게 설정해 leaseTime을 3초 설정했습니다.<br>
+또한 한정적인 공유 자원(좌석)이기 때문에 락을 획득하지 못한 경우 빨리 다른 좌석을 선택하기 위해 waitTime을 2초로 설정했습니다. 
