feat: 영화 예매 기능 distribute lock 함수형 기반 적용

--- a/docs/동시성테스트보고서.md
+++ b/docs/동시성테스트보고서.md
@@ -109,7 +109,7 @@ public class DistributedLockAop {
     private final RedissonClient redissonClient;
     private final AopForTransaction aopForTransaction;
 
-    @Around("@annotation(com.moduledomain.command.DistributedLock)")
+    @Around("@annotation(com.moduledomain.command.com.moduleinfra.support.DistributedLock)")
     public Object lock(final ProceedingJoinPoint joinPoint) throws Throwable {
         // ...
         List<RLock> locks = Arrays.stream(keys)
