docs: rate limit 적용 내용 추가

--- a/docs/성능테스트보고서.md
+++ b/docs/성능테스트보고서.md
@@ -16,6 +16,9 @@
     - e.g p(95) 의 응답 소요 시간 200ms 이하
     - 실패율 1% 이하
 
+- K6 부하 테스트 스크립트 
+  - [k6.js](..%2Fk6.js)
+
 ## 0. Index 적용 전 (검색 미적용)
 
 ### 쿼리 (실제로 동작하는 쿼리)
